<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bomberomedia.pocketengineer2.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <TextView
        android:id="@+id/lbl_FL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_FL"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />

    <TextView
        android:id="@+id/tv_FL_value"
        android:layout_width="106dp"
        android:layout_height="30dp"
        android:text="@string/fl_value"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBaseline_toBaselineOf="@+id/lbl_FL"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <SeekBar
        android:id="@+id/seek_hose_length"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:max="40"
        android:progress="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hose_type_spinner" />

    <SeekBar
        android:id="@+id/seek_flow_rate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:max="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="72dp"
        app:layout_constraintTop_toBottomOf="@+id/seek_hose_length"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/lbl_flow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/lbl_flow_rate"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintBottom_toTopOf="@+id/seek_flow_rate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lbl_elev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/lbl_elev"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintBottom_toTopOf="@+id/seek_elev"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lbl_hose_type"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/lbl_hose_type"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintBottom_toTopOf="@+id/hose_type_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lbl_hose_len"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/lbl_hose_length"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintBottom_toTopOf="@+id/seek_hose_length"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_hose_len_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/hose_len_val"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seek_hose_length" />

    <TextView
        android:id="@+id/tv_flow_rate_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/flow_value"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seek_flow_rate" />

    <SeekBar
        android:id="@+id/seek_elev"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="345dp"
        android:layout_height="27dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:max="20"
        android:progress="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        android:layout_marginTop="72dp"
        app:layout_constraintTop_toBottomOf="@+id/seek_flow_rate" />

    <TextView
        android:id="@+id/tv_elev_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elev_value"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:clickable="true"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/seek_elev"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp" />

    <Spinner
        android:id="@+id/hose_type_spinner"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/lbl_FL"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3581816025507456/8889005744"
        android:layout_marginTop="8dp"
        ads:layout_constraintTop_toBottomOf="@+id/tv_elev_value"
        ads:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        ads:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        ads:layout_constraintBottom_toBottomOf="parent">
    </com.google.android.gms.ads.AdView>

</android.support.constraint.ConstraintLayout>